@@ -1,0 +1,174 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*****************************************************************  *   Licensed to the Apache Software Foundation (ASF) under one  *  or more contributor license agreements.  See the NOTICE file  *  distributed with this work for additional information  *  regarding copyright ownership.  The ASF licenses this file  *  to you under the Apache License, Version 2.0 (the  *  "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *    http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing,  *  software distributed under the License is distributed on an  *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY  *  KIND, either express or implied.  See the License for the  *  specific language governing permissions and limitations  *  under the License.  ****************************************************************/
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|types
+package|;
+end_package
+
+begin_comment
+comment|/**  * This is char and Character type mapped to zero or one char String.  * @since 4.1  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|CharacterType
+implements|implements
+name|ValueObjectType
+argument_list|<
+name|Character
+argument_list|,
+name|String
+argument_list|>
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Class
+argument_list|<
+name|String
+argument_list|>
+name|getTargetType
+parameter_list|()
+block|{
+return|return
+name|String
+operator|.
+name|class
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Class
+argument_list|<
+name|Character
+argument_list|>
+name|getValueType
+parameter_list|()
+block|{
+return|return
+name|Character
+operator|.
+name|class
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Character
+name|toJavaObject
+parameter_list|(
+name|String
+name|value
+parameter_list|)
+block|{
+if|if
+condition|(
+name|value
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+if|if
+condition|(
+name|value
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|0
+return|;
+block|}
+if|if
+condition|(
+name|value
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|1
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Only one char String can be used, "
+operator|+
+name|value
+operator|+
+literal|" used"
+argument_list|)
+throw|;
+block|}
+return|return
+name|value
+operator|.
+name|charAt
+argument_list|(
+literal|0
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|fromJavaObject
+parameter_list|(
+name|Character
+name|object
+parameter_list|)
+block|{
+return|return
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|object
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|toCacheKey
+parameter_list|(
+name|Character
+name|object
+parameter_list|)
+block|{
+return|return
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|object
+argument_list|)
+return|;
+block|}
+block|}
+end_class
+
+end_unit
+
