@@ -231,6 +231,20 @@ name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|classesForPrimitives
+operator|.
+name|put
+argument_list|(
+literal|"char"
+argument_list|,
+name|Character
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 specifier|protected
 name|Map
