@@ -375,6 +375,22 @@ name|access
 operator|.
 name|types
 operator|.
+name|CharacterType
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|types
+operator|.
 name|CharType
 import|;
 end_import
@@ -2463,6 +2479,13 @@ operator|.
 name|add
 argument_list|(
 name|LocalDateTimeValueType
+operator|.
+name|class
+argument_list|)
+operator|.
+name|add
+argument_list|(
+name|CharacterType
 operator|.
 name|class
 argument_list|)
