@@ -17,6 +17,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -37,11 +47,71 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|query
+operator|.
+name|ObjectSelect
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|test
+operator|.
+name|jdbc
+operator|.
+name|DBHelper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|test
+operator|.
+name|jdbc
+operator|.
+name|TableHelper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|testdo
 operator|.
 name|primitive
 operator|.
 name|PrimitivesTestEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
+name|UnitDbAdapter
 import|;
 end_import
 
@@ -109,6 +179,18 @@ name|Test
 import|;
 end_import
 
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
+import|;
+end_import
+
 begin_class
 annotation|@
 name|UseServerRuntime
@@ -128,6 +210,18 @@ name|Inject
 specifier|private
 name|DataContext
 name|context
+decl_stmt|;
+annotation|@
+name|Inject
+specifier|private
+name|DBHelper
+name|dbHelper
+decl_stmt|;
+annotation|@
+name|Inject
+specifier|private
+name|UnitDbAdapter
+name|unitDbAdapter
 decl_stmt|;
 annotation|@
 name|Test
@@ -162,10 +256,165 @@ argument_list|(
 literal|88
 argument_list|)
 expr_stmt|;
+name|e
+operator|.
+name|setCharColumn
+argument_list|(
+literal|'B'
+argument_list|)
+expr_stmt|;
 name|context
 operator|.
 name|commitChanges
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSelect
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TableHelper
+name|tPrimitives
+init|=
+operator|new
+name|TableHelper
+argument_list|(
+name|dbHelper
+argument_list|,
+literal|"PRIMITIVES_TEST"
+argument_list|)
+decl_stmt|;
+name|tPrimitives
+operator|.
+name|setColumns
+argument_list|(
+literal|"ID"
+argument_list|,
+literal|"BOOLEAN_COLUMN"
+argument_list|,
+literal|"INT_COLUMN"
+argument_list|,
+literal|"CHAR_COLUMN"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|1
+init|;
+name|i
+operator|<=
+literal|20
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|tPrimitives
+operator|.
+name|insert
+argument_list|(
+name|i
+argument_list|,
+operator|(
+name|i
+operator|%
+literal|2
+operator|==
+literal|0
+operator|)
+argument_list|,
+name|i
+operator|*
+literal|10
+argument_list|,
+operator|(
+name|char
+operator|)
+operator|(
+literal|'a'
+operator|+
+name|i
+operator|)
+argument_list|)
+expr_stmt|;
+block|}
+name|List
+argument_list|<
+name|PrimitivesTestEntity
+argument_list|>
+name|result
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|PrimitivesTestEntity
+operator|.
+name|class
+argument_list|)
+operator|.
+name|orderBy
+argument_list|(
+name|PrimitivesTestEntity
+operator|.
+name|INT_COLUMN
+operator|.
+name|asc
+argument_list|()
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|20
+argument_list|,
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|40
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|3
+argument_list|)
+operator|.
+name|getIntColumn
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|'d'
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|getCharColumn
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
