@@ -124,6 +124,26 @@ specifier|static
 specifier|final
 name|Property
 argument_list|<
+name|Character
+argument_list|>
+name|CHAR_COLUMN
+init|=
+name|Property
+operator|.
+name|create
+argument_list|(
+literal|"charColumn"
+argument_list|,
+name|Character
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|Property
+argument_list|<
 name|Integer
 argument_list|>
 name|INT_COLUMN
@@ -142,6 +162,10 @@ decl_stmt|;
 specifier|protected
 name|boolean
 name|booleanColumn
+decl_stmt|;
+specifier|protected
+name|char
+name|charColumn
 decl_stmt|;
 specifier|protected
 name|int
@@ -187,6 +211,48 @@ return|return
 name|this
 operator|.
 name|booleanColumn
+return|;
+block|}
+specifier|public
+name|void
+name|setCharColumn
+parameter_list|(
+name|char
+name|charColumn
+parameter_list|)
+block|{
+name|beforePropertyWrite
+argument_list|(
+literal|"charColumn"
+argument_list|,
+name|this
+operator|.
+name|charColumn
+argument_list|,
+name|charColumn
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|charColumn
+operator|=
+name|charColumn
+expr_stmt|;
+block|}
+specifier|public
+name|char
+name|getCharColumn
+parameter_list|()
+block|{
+name|beforePropertyRead
+argument_list|(
+literal|"charColumn"
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+operator|.
+name|charColumn
 return|;
 block|}
 specifier|public
@@ -268,6 +334,14 @@ operator|.
 name|booleanColumn
 return|;
 case|case
+literal|"charColumn"
+case|:
+return|return
+name|this
+operator|.
+name|charColumn
+return|;
+case|case
 literal|"intColumn"
 case|:
 return|return
@@ -332,6 +406,25 @@ literal|false
 else|:
 operator|(
 name|Boolean
+operator|)
+name|val
+expr_stmt|;
+break|break;
+case|case
+literal|"charColumn"
+case|:
+name|this
+operator|.
+name|charColumn
+operator|=
+name|val
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+operator|(
+name|Character
 operator|)
 name|val
 expr_stmt|;
